--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <h1>PiPipes (PIP)</h1>
   <p>The official token powering future gaming in the Pi ecosystem.</p>
   <h3>Contract Address:</h3>
-  <p><code>0xYOUR_CONTRACT_ADDRESS_HERE</code></p>
+  <p><code>0xFc79231Fde80c4Ba2d929ce0BE6B1e38534E4478</code></p>
   <p>Decimals: 18</p>
   <h3>Socials:</h3>
   <p><a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a> | 
-     <a href="mailto:youremail@example.com">Email</a></p>
+     <a href="sauravniroula005@example.com">Email</a></p>
 </body>
 </html>
