--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <p><code>0xFc79231Fde80c4Ba2d929ce0BE6B1e38534E4478</code></p>
   <p>Decimals: 18</p>
   <h3>Socials:</h3>
-  <p><a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a> | 
-     <a href="sauravniroula005@example.com">Email</a></p>
+  <p><a href="https://x.com/PiPipesOfficial" target="_blank">X</a> | 
+     <a href="sauravniroula02@gmail.com">Email</a></p>
 </body>
 </html>
